@@ -37,6 +37,7 @@
 #include "s3backer.h"
 #include "block_cache.h"
 #include "ec_protect.h"
+#include "zero_cache.h"
 #include "fuse_ops.h"
 #include "http_io.h"
 #include "test_io.h"
